overflow fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -10,7 +10,6 @@
 @import "./components/overlay";
 @import "./misc/dark-mode";
 
-
 body {
   font-family: "Asul", "Chivo", sans-serif;
   margin: auto;
@@ -19,9 +18,8 @@ body {
   background: #111010;
 }
 
-html{
+html {
   scroll-behavior: smooth;
-
 }
 
 * {
@@ -30,7 +28,6 @@ html{
   padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
- 
 }
 
 main {
@@ -38,7 +35,7 @@ main {
   background-color: black;
 }
 
-.loading{
+.loading {
   position: absolute;
   z-index: 600;
   width: 100%;
@@ -46,29 +43,31 @@ main {
   top: 0%;
 }
 
-.first{
+.first {
   background: $more-black;
   left: 0%;
 }
 
-.second{
+.second {
   background: $more-black;
-  
+
   left: 33.3%;
 }
 
-.third{
+.third {
   background: $more-black;
   left: 66.6%;
 }
 
-
-
-@media (prefers-color-scheme:dark){
-  h1,h2,h3,p{
-      filter: invert(1) hue-rotate(180);
+@media (prefers-color-scheme: dark) {
+  h1,
+  h2,
+  h3,
+  p {
+    filter: invert(1) hue-rotate(180);
   }
 }
 
-
-
+.swiper-wrapper {
+  overflow: hidden;
+}
